Refactor style.css for improved readability and structure

--- a/Src/Style/style.css
+++ b/Src/Style/style.css
@@ -50,7 +50,7 @@
         color:rgb(255, 255, 255, 100);
     }
 
-    @media screen and (min-width: 100%) {
+    @media screen{
         #container {
             width: 100%;
         }   
@@ -313,5 +313,6 @@
         margin-top: 5px;
 
     }
+
 
 
