--- a/Src/Style/style.css
+++ b/Src/Style/style.css
@@ -41,7 +41,7 @@
             /*estilo de como fica a previsão*/
     #container  {
         width: 50%;
-        max-width: 720px;
+        max-width: 600px;
         margin: 0 auto;
         background-color: rgba(131, 56, 56, 0.25);
         box-shadow: 0 4px 12px rgba(0, 0, 0, 0.25);
@@ -53,6 +53,7 @@
     @media screen and (min-width: 500px) {
         #container {
             width: 100%;
+            max-width: none;
         }   
     }
 
@@ -313,6 +314,7 @@
         margin-top: 5px;
 
     }
+
 
 
 
