--- a/Src/Style/style.css
+++ b/Src/Style/style.css
@@ -40,8 +40,8 @@
     }
             /*estilo de como fica a previsão*/
     #container  {
-        width: 50%;
-        max-width: 500px;
+        width: 500px;
+        max-width: 100%;
         margin: 0 auto;
         background-color: rgba(131, 56, 56, 0.25);
         box-shadow: 0 4px 12px rgba(0, 0, 0, 0.25);
